add some thoughts about gorm gen templates
