# generated/aor-entity-example/cmd/aor-entity-example-server/migrate.go
@@ -6,31 +6,29 @@ import (
 
 var (
 	swaggerGeneratedModels = []interface{}{
-		&models.EntityFields{},
-		&models.User{},
-		&models.UserRoles{},
-		&models.DataSource{},
-		&models.CrudOptions{},
-		&models.FindEntityFieldsUsingGETOKBody{},
-		&models.Permission{},
-		&models.Role{},
-		&models.Apply{},
 		&models.ListUsingGET1OKBody{},
-		&models.GetSchemasUsingGETOKBody{},
-		&models.ListUsingGETOKBody{},
-		&models.EntityCrud{},
-		&models.JwtAuthenticationRequest{},
-		&models.GetRolesOKBody{},
-		&models.FindAllFieldsUsingGETOKBody{},
-		&models.ChoiceItem{},
-		&models.Entity{},
-		&models.GrantedAuthority{},
+		&models.UserRoles{},
+		&models.FindEntityFieldsUsingGETOKBody{},
+		&models.IChoiceItem{},
+		&models.Permission{},
 		&models.RoleUsers{},
-		&models.ResponseEntity{},
-		&models.ListUsersGETOKBody{},
 		&models.JwtUser{},
-		&models.JwtUserAuthorities{},
+		&models.ResponseEntity{},
 		&models.Field{},
-		// &models.IChoiceItem{},
+		&models.GetSchemasUsingGETOKBody{},
+		&models.EntityFields{},
+		&models.GrantedAuthority{},
+		&models.FindAllFieldsUsingGETOKBody{},
+		&models.JwtUserAuthorities{},
+		&models.Entity{},
+		&models.JwtAuthenticationRequest{},
+		&models.User{},
+		&models.ListUsersGETOKBody{},
+		&models.Apply{},
+		&models.DataSource{},
+		&models.GetRolesOKBody{},
+		&models.ChoiceItem{},
+		&models.Role{},
+		&models.ListUsingGETOKBody{},
 	}
 )
