# generated/aor-entity-example/models/crud_options.go
@@ -1,58 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/swag"
-)
-
-// CrudOptions crud options
-// swagger:model CrudOptions
-type CrudOptions struct {
-
-	// c
-	C bool `json:"c,omitempty"`
-
-	// d
-	D bool `json:"d,omitempty"`
-
-	// r
-	R bool `json:"r,omitempty"`
-
-	// u
-	U bool `json:"u,omitempty"`
-}
-
-// Validate validates this crud options
-func (m *CrudOptions) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *CrudOptions) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *CrudOptions) UnmarshalBinary(b []byte) error {
-	var res CrudOptions
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
